fixed scaling and overflows

--- a/src/styles/4 layer2/Layer2.css
+++ b/src/styles/4 layer2/Layer2.css
@@ -1,7 +1,7 @@
 .bg-gradient2 {
     position: absolute;
     width: 100%;
-    height: auto;
+    height: 1319px;
     max-width: 1847.51px;
     top: 1117px;
   }
