--- a/src/styles/5 layer1/Elements5.css
+++ b/src/styles/5 layer1/Elements5.css
@@ -2,7 +2,7 @@
     position: absolute;
     width: 479px;
     height: 107px;
-    left: 99px;
+    left: 139px;
     top: 5018px;
 
     font-family: 'Object Sans';
