--- a/src/styles/5 layer1/Layer1.css
+++ b/src/styles/5 layer1/Layer1.css
@@ -1,7 +1,8 @@
 .transition4-5 {
     position: absolute;
-    width: 1828.8px;
-    height: 500.74px;
-    left: -161px;
-    top: 4792.1px;
+    width: 100%;
+    height: 1167px;
+    max-width: 1828.8px;
+    left: 0px;
+    top: 4422.1px;
 }
