--- a/src/styles/5 layer1/Phones4.css
+++ b/src/styles/5 layer1/Phones4.css
@@ -1,26 +1,40 @@
+.phones-container {
+    position: absolute;
+    width: 100%;
+    height: 1167px;
+    max-width: 1543px;
+    left: -5px;
+    top: 1453px;
+    transform: scale(0.6);
+}
+
 .phone1 {
     position: absolute;
-    width: 405px;
-    height: 824px;
-    left: 1187px;
+    width: 100%;
+    height: 1167px;
+    max-width: 571px;
+    left: -370px;
     top: 3904px;
     filter: drop-shadow(32px 29px 10px rgba(22, 21, 21, 0.25));
 }
 
 .phone2 {
     position: absolute;
-    width: 406px;
-    height: 824px;
-    left: 619px;
+    width: 100%;
+    height: 1167px;
+    max-width: 571px;
+    left: 50%;
+    transform: translateX(-50%);
     top: 4127px;
     filter: drop-shadow(32px 29px 10px rgba(22, 21, 21, 0.25));
 }
 
 .phone3 {
     position: absolute;
-    width: 406px;
-    height: 824px;
-    left: 49px;
+    width: 100%;
+    height: 1167px;
+    max-width: 571px;
+    right: -370px;
     top: 3905px;
     filter: drop-shadow(32px 29px 10px rgba(22, 21, 21, 0.25));
 }
